tests/valhalla/neg/VVCMutableField.scala
import scala.annotation.valhalla

@valhalla
class VVCMutableField extends AnyVal {
  var a = 5 // error
}